--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!---------------------------- start header section ------------->    
     <header class="container">
         <section>
-            <nav class="navbar navbar-expand-lg bg-light">
+            <nav class="navbar navbar-expand-lg bg-light fixed-top">
                 <div class="container-fluid">
                   <a class="navbar-brand fs-4 fw-bold text-primary" href="#">TECH LEARN</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,10 +36,10 @@
                         <a class="nav-link" href="#our-courses">Courses</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Coupons</a>
+                        <a class="nav-link" href="#our-faq">FAQ</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Success</a>
+                        <a class="nav-link" href="#our-success">Success</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="#">About</a>
@@ -95,8 +95,8 @@
 <!--------------- end header section ------------------>
 <!------------------------ start courses section ---------------------->
 <main class="container text-center my-5" id="our-courses">
-  <h2 class="pt-5">Explore Our Popular Courses</h2>
-  <p class="pb-5">Learn more about our courses contents and requirements. You will also get deatails about our course Instructors.</p>
+  <div><h2 class="pt-5">Explore Our Popular Courses</h2>
+    <p class="pb-5">Learn more about our courses contents and requirements. You will also get deatails about our course Instructors.</p></div>
 <section class="row gx-lg-4 gy-4">
     <div class="tedu-single-courses col-lg-6 col-12">
         <div class="d-flex flex-column flex-lg-row flex-md-row border rounded">
@@ -159,19 +159,21 @@
         </div>
          </div>
     </div>
-    <a href=""><button class="btn btn-info mt-3 text-center fw-bold text-white">Explore More Courses</button></a>
+    <div class="pb-lg-5">
+      <a href=""><button class="btn btn-info mt-3 text-center fw-bold text-white">Explore More Courses</button></a>
+    </div>
 </section>
 
 <!------------------------- start register section ----------------------->
-<section class="my-5" id="register-section">
-    <div class="d-flex flex-column flex-lg-row align-items-center bg-info rounded">
+<section class="my-5 pb-lg-3" id="register-section">
+    <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between bg-info rounded">
         <div class="pb-0 pt-5 px-5 p-lg-5 text-white text-start">
             <h3>Ready to Join?</h3>
             <p>Let's Join by clicking Register button and start exploring the Digital world.</p>
         </div>
         <div class="pb-5 p-lg-5">
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Register Now</button>
+<button type="button" class="btn btn-light ms-lg-5 fw-bold text-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Register Now</button>
   
   <!-- Modal -->
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -209,7 +211,7 @@
     </div>
 </section>
 <!-------------------- Successful students section ---------------------->
-<section class="my-5">
+<section class="my-5 pb-lg-3" id="our-success">
   <h2 class="my-5">Meet Our Successful Students</h2>
   <div class="text-center">
     <div class="row gy-5">
@@ -242,7 +244,7 @@
 </section>
 
 <!---------------------------- faq section ------------------------->
-<section>
+<section class="pb-lg-5" id="our-faq">
   <div>
     <h2>Frequently Asked Questions</h2>
     <p>Got a question? Here we answer some frequently asked question can strom your mind!</p>
