--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <section>
             <nav class="navbar navbar-expand-lg bg-light fixed-top">
                 <div class="container-fluid">
-                  <a class="navbar-brand fs-4 fw-bold text-primary ms-5" href="#">TECH LEARN</a>
+                  <a class="navbar-brand fs-4 fw-bold text-primary ms-lg-5 ms-md-5" href="#">TECH LEARN</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
